--- a/templates/questionDetail.html
+++ b/templates/questionDetail.html
@@ -30,10 +30,56 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-9">
-				
+				<div class="question">
+					<div class="console-button">
+						<div class="vote-btn vote-btn-up" ng-click="addVote()"></div>
+						<div class="vote-count" ng-bind="question.votes"></div>
+						<div class="vote-btn vote-btn-down" ng-click="subVote()"></div>
+					</div>
+					<div class="content">
+						<p>{{question.content}}</p>
+						<div class="q-tags">
+							<ul class="list-inline tag">
+								<li ng-repeat="tag in question.tags">
+									<a href="" class="custom-a-none"><span class="label label-info">{{tag.label}}</span></a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="answers">
+					<div class="answers-Num">{{answers.count}}个回答</div>
+					<div class="answer" ng-repeat="answer in answers">
+						<div class="console-button">
+							<div class="vote-btn vote-btn-up" ng-click="addVote()"></div>
+							<div class="vote-count" ng-bind="question.votes"></div>
+							<div class="vote-btn vote-btn-down" ng-click="subVote()"></div>
+						</div>
+						<div class="ahthor">
+							<a class="custom-a-none" href="">{{answer.author}}</a>
+							<span>&nbsp;&nbsp;{{answer.date}}&nbsp;&nbsp;</span>回答
+						</div>
+						<div class="content">
+							<p>{{answer.content}}</p>
+						</div>
+						<div class="comment">
+							<a href="#">0评论</a>
+						</div>
+						<div class="line"></div>
+					</div>
+				</div>
 			</div>
 			<div class="col-md-3">
-				
+				<div>
+					<div class="first-widget-box">
+						<h4>
+							相似问题
+						</h4>
+						<ul class="list-inline li-block">
+							<li class="tag-message" ng-repeat="question in similarQuestions"><a href="#/community/question/{{question.id}}">{{question.title}}</a></li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
