--- a/templates/questionDetail.html
+++ b/templates/questionDetail.html
@@ -63,7 +63,7 @@
 							<p>{{answer.content}}</p>
 						</div>
 						<div class="comment">
-							<a href="#">0评论</a>
+							<a href="javascript:void(0)" ng-click="checkComment()">0评论</a>
 						</div>
 						<div class="line"></div>
 					</div>
