今天很不高兴啊，bootstrap+angularjs tab页切换不好使了

--- a/templates/answer.html
+++ b/templates/answer.html
@@ -4,7 +4,7 @@
 	<div class="vote-btn vote-btn-down" ng-click="subVote(answer)"></div>
 </div>
 <div class="ahthor">
-	<a class="custom-a-none userName" href="">{{answer.author}}</a>
+	<a class="custom-a-none userName" href="#/community/userInfo/{{answer.author}}">{{answer.author}}</a>
 	<span>&nbsp;&nbsp;{{answer.date}}&nbsp;&nbsp;</span>回答
 </div>
 <div class="content">
@@ -14,10 +14,10 @@
 	<a href="javascript:void(0)" ng-click="checkComment()">{{comments.length}}评论</a>
 	<div ng-show="showComments" class="comment">
 		<div ng-repeat="comment in comments">
-			<small>回复:</small><a ng-href="#" class="custom-a-none userName">{{comment.toUser}}</a>
+			<small>回复:</small><a ng-href="#/community/userInfo/{{comment.toUser}}" class="custom-a-none userName">{{comment.toUser}}</a>
 			<p ng-bind="comment.content"></p>
 			<span>{{comment.floor | floorFilter}}</span>
-			<a ng-href="#" class="custom-a-none userName">{{comment.author}}</a>
+			<a ng-href="#/community/userInfo/{{comment.author}}" class="custom-a-none userName">{{comment.author}}</a>
 			<span>{{comment.date | date:"yyyy-mm-dd" | commentDateFilter}}</span>
 			<small class="reply" ng-click="replyClick(comment)">回复</small>
 			<div class="comment-line"></div>
