--- a/templates/question.html
+++ b/templates/question.html
@@ -6,7 +6,7 @@
 <div class="summary">
 	<div class="author">
 		<span>{{question.date}}</span>来自
-		<a class="custom-a-none" href="">{{question.author}}</a>
+		<a class="custom-a-none" href="#/community/userInfo/{{question.author}}">{{question.author}}</a>
 	</div>
 	<h3 class="title">
 		<a class="custom-a-brown" href="#/community/question/{{question.id}}">{{question.title}}</a>
