--- a/templates/questionDetail.html
+++ b/templates/questionDetail.html
@@ -9,7 +9,7 @@
 					</div>
 					<h2 class="title">{{question.title}}</h2>
 					<div class="pt-10">
-						<a class="custom-a-none userName" href="">{{question.author}}</a>
+						<a class="custom-a-none userName" href="#/community/userInfo/{{question.author}}">{{question.author}}</a>
 						<span>&nbsp;&nbsp;提问于&nbsp;&nbsp;</span>
 						<span>{{question.date}}</span>
 					</div>
