--- a/css/community.css
+++ b/css/community.css
@@ -98,8 +98,14 @@
 .pt-10{
 	padding-top: 10px;
 }
+.pt-30{
+	padding-top: 30px;
+}
 .mt-10{
 	margin-top: 10px;
+}
+.mt-15{
+	margin-top: 15px;
 }
 .question-date{
 	color: #428BCA;
@@ -191,4 +197,34 @@
 }
 .comment-input{
 	width:100%;
+}
+.userHeadImg{
+	width:100%;
+	height:132px;
+}
+.userHeadImg>img{
+	background: no-repeat center;
+}
+.cus-btn{
+	width: 90px;
+	height: 30px;
+	text-align: center;
+	vertical-align: middle;
+	padding-top:5px;
+	cursor:pointer;
+}
+.cus-btn:hover{
+	background-color: #eee;
+}
+.cus-btn:active{
+	background-color: #008E59;
+}
+.tabActive > a,
+.tabActive > a:hover,
+.tabActive > a:focus {
+	color: #555555;
+	cursor: default;
+	background-color: #ffffff;
+	border: 1px solid #dddddd;
+	border-bottom-color: transparent;
 }
