--- a/templates/community.html
+++ b/templates/community.html
@@ -6,18 +6,20 @@
 					今天您遇到了什么问题呢？
 					<a href="#" class="btn btn-primary">我要提问</a>
 				</div>
-				<ul class="nav nav-tabs" role="tablist">
-				  	<li role="presentation" class="active"><a href="#new">最新的</a></li>
-				  	<li role="presentation"><a href="#hot">热门的</a></li>
-				 	<li role="presentation"><a href="#unanswered">未回答的</a></li>
+				<ul class="nav nav-tabs">
+				  	<li class="active"><a href="#new" data-toggle="tab">最新的</a></li>
+				  	<li><a href="#hot" data-toggle="tab">热门的</a></li>
+				 	<li><a href="#unanswered" data-toggle="tab">未回答的</a></li>
 				</ul>
 				<div class="tab-content">
-					<div class="tab-pane active" data-toggle="tab" id="new" ng-controller="QuestionsController">
+					<div class="tab-pane active" id="new" ng-controller="QuestionsController">
 						<div class="question-list-item" ng-repeat="question in questions">
 							<!-- <div question-item question= {{question}}></div> -->
 							<question-item></question-item>
 						</div>
 					</div>
+					<div class="tab-pane" id="hot">热门的内容</div>
+					<div class="tab-pane" id="unanswered">222</div>
 				</div>
 			</div>
 			<div class="col-md-3">
