--- a/templates/question.html
+++ b/templates/question.html
@@ -1,13 +1,13 @@
 <div class="rank">
-	<div class="votesNum"><span>{{question.voteNum}}</span><span class="rank-block">Í¶Æ±</span></div>
+	<div class="votesNum"><span>{{question.voteNum}}</span><span class="rank-block">æŠ•ç¥¨</span></div>
 	<div class="{{question.status_class}} answersNum">
 		<span>{{question.answerNum}}</span><span class="rank-block">{{question.status}}</span>
 	</div>
-	<div class="viewNum"><span>{{question.viewNum}}</span><span class="rank-block">ä¯ÀÀ</span></div>
+	<div class="viewNum"><span>{{question.viewNum}}</span><span class="rank-block">æµè§ˆ</span></div>
 </div>
 <div class="summary">
 	<div class="author">
-		<span>{{question.askDate}}</span>À´×Ô
+		<span>{{question.askDate}}</span>æ¥è‡ª
 		<a href="#/community/userInfo/{{question.userId}}">{{question.userId}}</a>
 	</div>
 	<div class="content">
