--- a/templates/ask.html
+++ b/templates/ask.html
@@ -3,16 +3,23 @@
 	<pub-nav></pub-nav>
 	<div class="container">
 		<form name="questionForm">
-			<h4>提问题</h4>
-			<input ng-model="question.title" class="title-input mb-10" type="text" placeholder="提问：一句话说清你在开发中遇到的问题"></input>
-
+			<!-- <span>杩欎釜鍦版柟鐢╞ootstrap鐨刣ropdown,涓嶄細鐢ㄥ晩,鑷繁鍐欎簡...</span> -->
+			<div class="btn-group mb-10">
+			  	<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="dropdown-label">鎻愰棶</span><span class="caret"></span>
+			  	</button>
+				<ul class="dropdown-menu" role="menu"">
+				  	<li><a href="javascript:void(0)" ng-click="ask()">鎻愰棶</a></li>
+				  	<li><a href="javascript:void(0)" ng-click="share()">鍒嗕韩</a></li>
+				</ul>
+			</div>
+			<input ng-model="question.title" class="title-input mb-10" type="text" placeholder="{{placeholder}}"></input>
 			<!-- <expander></expander> -->
 			<question-tags></question-tags>
 			
 			<script id="editor" type="text/plain" style="width:100%;height:500px;"></script>
 		</form>
 		<div class="mt-10 text-right">
-			<button id="publishQuestion" class="btn btn-primary" ng-click="publishQuestion()">发布问题</button>
+			<button id="publishQuestion" class="btn btn-primary" ng-click="publishQuestion()">{{publishButton}}</button>
 		</div>
 	</div>
 </div>
