--- a/templates/community.html
+++ b/templates/community.html
@@ -4,21 +4,22 @@
 		<div class="row">
 			<div class="col-md-9">
 				<div class="main-title">
-					Ê¹ÓÃUEP¿ª·¢Óöµ½ÎÊÌâÁËÂð£¿
-					<a href="#/community/askQuestion" class="btn btn-primary">ÎÒÒªÌáÎÊ</a>
+					ä½¿ç”¨UEPå¼€å‘ï¼Œæˆ‘æœ‰è¯è¯´
+					<a href="#/community/askQuestion" class="btn btn-primary">æé—®/åˆ†äº«</a>
 				</div>
 				<div class="btn-group">
-				 	<div class="btn" ng-class="{'btn-warning':activedTabId==newTabId,'btn-success':activedTabId!=newTabId}" type="button" ng-click="tabClick(newTabId)">×îÐÂµÄ</div>
-				 	<div class="btn" ng-class="{'btn-warning':activedTabId==hotTabId,'btn-success':activedTabId!=hotTabId}" type="button" ng-click="tabClick(hotTabId)">ÈÈÃÅµÄ</div>
-				 	<div class="btn" ng-class="{'btn-warning':activedTabId==unsolvedTabId,'btn-success':activedTabId!=unsolvedTabId}" type="button" ng-click="tabClick(unsolvedTabId)">Î´½â¾öµÄ</div>
+				 	<div class="btn" ng-class="{'btn-warning':activedTabId==newTabId,'btn-success':activedTabId!=newTabId}" type="button" ng-click="tabClick(newTabId)">æœ€æ–°çš„</div>
+				 	<div class="btn" ng-class="{'btn-warning':activedTabId==hotTabId,'btn-success':activedTabId!=hotTabId}" type="button" ng-click="tabClick(hotTabId)">çƒ­é—¨çš„</div>
+				 	<div class="btn" ng-class="{'btn-warning':activedTabId==unsolvedTabId,'btn-success':activedTabId!=unsolvedTabId}" type="button" ng-click="tabClick(unsolvedTabId)">æœªè§£å†³çš„</div>
+				 	<div class="btn" ng-class="{'btn-warning':activedTabId==articleTabId,'btn-success':activedTabId!=articleTabId}" type="button" ng-click="tabClick(articleTabId)">åˆ†äº«</div>
 				</div>
-				<!-- <hr> -->
+				<hr class="mb-0">
 				<div ng-show="activedTabId==newTabId">
 					<div class="question-list-item" ng-repeat="question in newQuestions">
 						<question-item></question-item>
 					</div>
 					<pagination id="1" get-page-size-action="getAllQuesPageInfo" change-page="changePage(newTabId,curPageNum)"></pagination>
-					<!-- ÕâÀï×îºÃÊÇ²»´«µÝid£¬¿ÉÒÔ´«µÝÒ»¸öparam¶ÔÏó£¬°üº¬ÁËchangePage()ËùÐèÒªµÄËùÓÐ²ÎÊý -->
+					<!-- è¿™é‡Œæœ€å¥½æ˜¯ä¸ä¼ é€’idï¼Œå¯ä»¥ä¼ é€’ä¸€ä¸ªparamå¯¹è±¡ï¼ŒåŒ…å«äº†changePage()æ‰€éœ€è¦çš„æ‰€æœ‰å‚æ•° -->
 				</div>
 				<div ng-show="activedTabId==hotTabId">
 					<div class="question-list-item" ng-repeat="question in collectedQuestions">
@@ -32,28 +33,34 @@
 					</div>
 					<pagination id="3" get-page-size-action="getUnSolvedQuesPageInfo" change-page="changePage(unsolvedTabId,curPageNum)"></pagination>
 				</div>
+				<div ng-show="activedTabId==articleTabId">
+					<div class="question-list-item" ng-repeat="article in articles">
+						<article-item></article-item>
+					</div>
+					<pagination id="4" get-page-size-action="getAllSharePageInfo" change-page="changePage(articleTabId,curPageNum)"></pagination>
+				</div>
 			</div>
 			<div class="col-md-3">
 				<div>
 					<div class="widget-welcome">
 						<h4 class="title">
-							¿ª·¢ÕßÉçÇø¹«¸æ
+							å¼€å‘è€…ç¤¾åŒºå…¬å‘Š
 						</h4>
-						<p>UEP¿ª·¢¼¼ÊõÎÊ´ðºÍ½»Á÷ÉçÇø£¬´ó¼Ò»¥Ïà°ïÖú£¬Ò»ÆðÇÐ´è£¬¹²Í¬Ìá¸ß¡£</p>
+						<p>UEPå¼€å‘æŠ€æœ¯é—®ç­”å’Œäº¤æµç¤¾åŒºï¼Œå¤§å®¶äº’ç›¸å¸®åŠ©ï¼Œä¸€èµ·åˆ‡ç£‹ï¼Œå…±åŒæé«˜ã€‚</p>
 					</div>
 				</div>
 				<div class="widget-box">
 					<input class="search-box" ng-model="searchInfo"></input>
-					<button class="btn btn-success" ng-click="searchQuestions()">ËÑË÷</button>
+					<button class="btn btn-success" ng-click="searchQuestions()">æœç´¢</button>
 				</div>
 				<!-- <div ng-controller="UserInfoController" ng-show="nav_hasLogin">
 					<div class="first-widget-box">
-						<a href="">ÎÒµÄÊÕ²Ø</a>
-						<a href="">ÎÒµÃÌáÎÊ</a>
+						<a href="">æˆ‘çš„æ”¶è—</a>
+						<a href="">æˆ‘å¾—æé—®</a>
 					</div>
 					<div class="widget-box">
 						<h4>
-							¹Ø×¢±êÇ©£º
+							å…³æ³¨æ ‡ç­¾ï¼š
 						</h4>
 						<ul class="list-inline">
 							<li class="tag-label" ng-repeat="tag in userInfo.focusTags"><a href="" class="custom-a-white custom-a-none">{{tag.label}}</a></li>
@@ -72,7 +79,7 @@
 					</div>
 					<div class="widget-box">
 						<h4>
-							×î½üÈÈÒé»°Ìâ
+							æœ€è¿‘çƒ­è®®è¯é¢˜
 						</h4>
 						<ul class="list-inline li-block">
 							<li class="tag-message" ng-repeat="question in hotQuestions"><a href="#/community/question/{{question.id}}">{{question.title}}</a></li>
