--- a/templates/loginDialog.html
+++ b/templates/loginDialog.html
@@ -3,17 +3,17 @@
         <div class="modal-content">
           <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-              <h4 class="modal-title">µ«¬º–≈œ¢</h4>
+              <h4 class="modal-title">ÁôªÂΩï‰ø°ÊÅØ</h4>
           </div>
           <div class="modal-body">
               <label for="username"></label>
-              <input class="form-control" type="text" ng-model="username" placeholder="”√ªß√˚"></input>
+              <input class="form-control" type="text" ng-model="username" placeholder="Áî®Êà∑Âêç"></input>
               <label for="password"></label>
-              <input class="form-control" type="password" ng-model="password" placeholder="√‹¬Î"></input>
+              <input class="form-control" type="password" ng-model="password" placeholder="ÂØÜÁ†Å"></input>
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">»°œ˚</button>
-              <button type="button" class="btn btn-primary" ng-click="login()">Ã·Ωª</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">ÂèñÊ∂à</button>
+              <button type="button" class="btn btn-primary" ng-click="login()">Êèê‰∫§</button>
           </div>
         </div>
     </div>
