--- a/templates/uploadImgDialog.html
+++ b/templates/uploadImgDialog.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
           <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-              <h4 class="modal-title">设置头像</h4>
+              <h4 class="modal-title">璁剧疆澶村儚</h4>
           </div>
           <div class="modal-body">
               <div class="container">
@@ -24,11 +24,11 @@
           </div>
           <div class="modal-footer">
               <label class="btn btn-primary" for="inputImage" title="Upload image file" ng-controller="selectImgController">
-		          <input class="hide" id="inputImage" name="file" type="file" accept="image/*">选择图片</input>
+		          <input class="hide" id="inputImage" name="file" type="file" accept="image/*">閫夋嫨鍥剧墖</input>
 		      </label>
               <button type="button" class="btn btn-info" ng-click="zoomIn()">Zoom In</button>
         	  <button type="button" class="btn btn-info" ng-click="zoomOut()">Zoom Out</button>
-              <button type="button" class="btn btn-primary" ng-click="submitImg()">提交图片</button>
+              <button type="button" class="btn btn-primary" ng-click="submitImg()">鎻愪氦鍥剧墖</button>
           </div>
         </div>
     </div>
